<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_edit_profile"
        android:name="pt.unl.fct.di.www.zoom.ui.profile.EditProfileFragment"
        android:label="@string/title_edit_profile"
        tools:layout="@layout/fragment_edit_profile"/>

    <fragment
        android:id="@+id/navigation_individual_server"
        android:name="pt.unl.fct.di.www.zoom.ui.server.ServerFragment"
        android:label="@string/title_individual_server"
        tools:layout="@layout/individual_server" />

    <fragment
        android:id="@+id/navigation_individual_meeting"
        android:name="pt.unl.fct.di.www.zoom.ui.meetings.MeetingFragment"
        android:label="@string/title_individual_meeting"
        tools:layout="@layout/fragment_meeting" />

    <fragment
        android:id="@+id/navigation_users"
        android:name="pt.unl.fct.di.www.zoom.ui.users.UsersFragment"
        android:label="@string/title_users"
        tools:layout="@layout/fragment_users"
        />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="pt.unl.fct.di.www.zoom.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat"/>

    <fragment
        android:id="@+id/navigation_meetings"
        android:name="pt.unl.fct.di.www.zoom.ui.meetings.MeetingsFragment"
        android:label="@string/title_meetings"
        tools:layout="@layout/fragment_meetings" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="pt.unl.fct.di.www.zoom.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="pt.unl.fct.di.www.zoom.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_server"
        android:name="pt.unl.fct.di.www.zoom.ui.server.ServersFragment"
        android:label="@string/title_server"
        tools:layout="@layout/fragment_server" />

    <fragment
        android:id="@+id/navigation_create_meeting"
        android:name="pt.unl.fct.di.www.zoom.ui.meetings.CreateMeetingFragment"
        android:label="@string/title_meetings"
        tools:layout="@layout/fragment_create_meeting" />

    <fragment
        android:id="@+id/navigation_create_server"
        android:name="pt.unl.fct.di.www.zoom.ui.server.CreateServerFragment"
        android:label="@string/title_server"
        tools:layout="@layout/fragment_create_server" />

</navigation>